--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*	=============================================================
-	ZAK ROWLING STYLE SHEET
+	MOLTO BENE STYLE SHEET
 	-------------------------------------------------------------
 	=============================================================	*/
 	
@@ -9,10 +9,10 @@
 	
 body {
 	height: 90vh;
-	font: 21px "Frank Ruhl Libre", Georgia, Serif;
+	font: 20px "Droid Serif", Georgia, Serif;
 	font-style: normal;
 	text-align: left;
-	color: #a9a9a9;
+	color: #c8c7c4;
 	background: #2d2b29 no-repeat center center;	
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
@@ -35,7 +35,6 @@ body {
 	border-bottom: 1px #38332d solid;
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
 
@@ -105,9 +104,9 @@ body {
 #header .logo a:visited {
 	display: block;
 	padding: 8px 0 0px 22px;
-        font: bold 0.8em "Poppins", Futura, Sans-serif;
-        letter-spacing: 4px;
-	color: #565656;
+        font: bold 0.9em "Poppins", Futura, Sans-serif;
+        letter-spacing: 3px;
+	color: #8f8d87;
 	text-decoration: none;
 }
 
@@ -123,7 +122,7 @@ body {
 	position: absolute;
 	display: block;
 	top: 24px;
-	left: 27.4%;
+	left: 26%;
 }
 
 #header_menu li {
@@ -138,8 +137,8 @@ body {
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: 3px;
-	font: 0.65em "Poppins", Arial, Sans-serif;
-	color: #6d6d6d;
+	font: 0.7em "Poppins", Arial, Sans-serif;
+	color: #8f8d87;
 }
 
 #header_menu li a:hover {
@@ -150,7 +149,8 @@ body {
 	color: #fff;
 }
 
-#header_menu.about li a.about {
+#header_menu.about li a.about,
+#header_menu.blog li a.blog {
 	color: #fff;
 }
 
@@ -301,9 +301,9 @@ h1 {
 }
 
 h2 {
-	padding: 0 0 7px 0;
-	font: bold 1.3em "Poppins", Arial, Sans-serif;
-	color: #454545;
+	padding: 12px 0 7px 0;
+	font-size: 28px;
+	color: #fff;
 }
 
 h3 {
@@ -320,6 +320,11 @@ h3 span {
 	font-size: 0.5em;
 }
 
+h3 a:link,
+h3 a:visited {
+	font-weight: bold;
+}
+
 h4 {
 	padding: 4px 0;
 	line-height: 1.2em;
@@ -329,6 +334,10 @@ h4 {
 
 h4 span {
 	color: #454545;
+}
+
+h5 {
+	color: #fff;
 }
 
 p {
@@ -351,12 +360,12 @@ p {
 	color: #d8a731;
 }
 
-#page #gallery a:link,
-#page #gallery a:visited {
+#page p a:link,
+#page p a:visited {
 	border-bottom: 1px #efefef solid;
 }
 
-#page #gallery a:hover {
+#page p a:hover {
 	border-bottom: 1px #d8a731 dotted;
 }
 
@@ -385,15 +394,17 @@ p {
         top: -16px;
         left: -1px;
         padding: 0 6px;
-        font-size: 0.7em;
+        font-size: 0.8em;
         letter-spacing: 1px;
 	color: #ffffff;
 	background-color: #d8a731;
 }
 
+#page .button,
 #page a.button:link,
 #page a.button:visited {
 	display: block;
+	cursor: pointer;
 	clear: left;
 	float: left;
         margin: 4px 0 22px 0;
@@ -401,13 +412,37 @@ p {
         text-decoration: none;
         text-transform: uppercase;
         border: 1px #d8a731 solid;
-        font: 0.7em "Poppins", Arial, Sans-serif;
+        font: 0.8em "Poppins", Arial, Sans-serif;
         letter-spacing: 3px;
 	color: #d8a731;
+	background: none;
 }
 
+#page .button,
 #page a.button:hover {
 	color: #fff;
+}
+
+blockquote {
+	background: #f9f9f9;
+	border-left: 5px solid #ccc;
+	margin: 0.8em 0;
+	padding: 1.5em 3%;
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+}
+
+blockquote:before {
+	color: #ccc;
+	content: "â€œ";
+	font: 4em Times, Serif;
+	line-height: 0.1em;
+	margin-right: 0.15em;
+	vertical-align: -0.4em;
+}
+
+blockquote p {
+	display: inline;
+	color: #212121;
 }
 
 
@@ -432,12 +467,26 @@ body.home #page {
 }
 
 #page .home_content {
-	padding: 100px 0 10px 0;
-	font-size: 1.4em;
+	padding: 100px 0 40px 0;
 }
 
-#page .home_content h3 {
-	padding: 0;
+#page .home_content h1 {
+	padding-bottom: 20px;
+	font: bold 1.3em "Poppins", Arial, Sans-serif;
+	line-height: 1.3em;
+	color: #fff;
+}
+
+#page .home_content h2 {
+	font-weight: normal;
+	text-transform: none;
+	font-size: 0.9em;
+	line-height: 1.6em;
+	color: #c8c7c4;
+}
+
+#page .home_content strong {
+	color: #d8a731;
 }
 
 #page .home_content em {
@@ -447,37 +496,16 @@ body.home #page {
 }
 
 #page .home_content p {
+	position: relative;
+	font-size: 0.8em;
+}
+
+#page .home_content a.button:link,
+#page .home_content a.button:visited {
+	display: inline-block;
+	float: none;
+	width: auto;
 	font-size: 0.9em;
-}
-
-#page .home_content .profile_image {
-	background: url(https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-19/s320x320/12816993_1080535652004508_1776315401_a.jpg) no-repeat center center;
-	background-size: 100px 100px;
-	float: right;
-	width: 100px;
-	height: 100px;
-	border-radius: 100px;
-}
-
-#page .home_content .profile_image:hover {
-        background-size: 120px 120px;
-}
-
-#page .home_content .gold strong {
-        font-family: Arial, Sans-serif;
-        letter-spacing: -1px;
-	-moz-animation-name: letter-animate;
-	-moz-animation-iteration-count: 1;
-	-moz-animation-timing-function: ease;
-	-moz-animation-duration: 4s;
-	-webkit-animation-name: letter-animate;
-	-webkit-animation-iteration-count: 1;
-	-webkit-animation-timing-function: ease;
-	-webkit-animation-duration: 4s;
-	animation-name: letter-animate;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-duration: 4s;
 }
 
 body.home #header {
@@ -515,25 +543,37 @@ body.home #header {
 
 #page .home_content {
 	color: #fff;
-	-moz-animation-name: page-animate;
+	-moz-animation-name: fade-animate;
 	-moz-animation-iteration-count: 1;
 	-moz-animation-timing-function: ease;
-	-moz-animation-duration: 1s;
-	-webkit-animation-name: page-animate;
+	-moz-animation-duration: 0.5s;
+	-webkit-animation-name: fade-animate;
 	-webkit-animation-iteration-count: 1;
 	-webkit-animation-timing-function: ease;
-	-webkit-animation-duration: 1s;
-	animation-name: page-animate;
+	-webkit-animation-duration: 0.5s;
+	animation-name: fade-animate;
 	animation-iteration-count: 1;
 	animation-timing-function: ease;
-	animation-duration: 1s;
+	animation-duration: 0.5s;
+}
+
+#page .home_content .years {
+	display: inline-block;
+	text-align: center;
+	width: 26px;
+}
+
+#page .work a:link,
+#page .work a:visited,
+#page .work a:hover {
+	border: none;
 }
 
 #page .work a:link:nth-child(1),
 #page .work a:visited:nth-child(1) {
 	font-size: 1.3em;
 	width: 46vw;
-	height: 74vh;
+	height: 77vh;
 	-moz-animation-duration: 4s;
 	-webkit-animation-duration: 4s;
 	animation-duration: 4s;
@@ -543,7 +583,7 @@ body.home #header {
 #page .work a:visited:nth-child(2) {
 	font-size: 1.3em;
 	width: 46vw;
-	height: 74vh;
+	height: 77vh;
 	-moz-animation-duration: 5s;
 	-webkit-animation-duration: 5s;
 	animation-duration: 5s;
@@ -610,7 +650,7 @@ body.home #header {
 #page .work a small {
 	letter-spacing: 1px;
 	opacity: 0.5;
-	font: 0.8em "Frank Ruhl Libre", Georgia, serif;
+	font: 0.8em "Droid Serif", Georgia, Serif;
 	text-transform: none;
 }
 
@@ -661,24 +701,24 @@ body.home #header {
 	height: 100%;
 	width: 100%;
 	background-color: rgba(45,43,41,0.95);
-	background-image: url('http://zakrowling.com/wp-content/themes/zakrowling/images/home/macbook.png');
+	background-image: url('http://moltobene.co/wp-content/themes/moltobene/images/home/macbook.png');
 	background-position: center 70%;
 	background-size: auto 30%;
 	background-repeat: no-repeat;
 }
 
 #page .work a .devices.show-mobile {
-	background-image: url('http://zakrowling.com/wp-content/themes/zakrowling/images/home/iphone.png');
+	background-image: url('http://moltobene.co/wp-content/themes/moltobene/images/home/iphone.png');
 }
 
 #page .work a .devices.mobile {
-	background-image: url('http://zakrowling.com/wp-content/themes/zakrowling/images/home/macbook.png'),
-		url('http://zakrowling.com/wp-content/themes/zakrowling/images/home/iphone.png');
+	background-image: url('http://moltobene.co/wp-content/themes/moltobene/images/home/macbook.png'),
+		url('http://moltobene.co/wp-content/themes/moltobene/images/home/iphone.png');
 	background-position: 20% 70%, 80% 70%;
 }
 
 #page .work a .devices.personal {
-	background-image: url('http://zakrowling.com/wp-content/themes/zakrowling/images/home/mpc.png');
+	background-image: url('http://moltobene.co/wp-content/themes/moltobene/images/home/mpc.png');
 }
 
 
@@ -692,11 +732,6 @@ body.home #header {
 	text-transform: uppercase;
 }
 
-#page .home_content strong {
-	font-weight: normal;
-	opacity: 0.5;
-}
-
 #page .work {
 	text-align: center;
 }
@@ -705,7 +740,7 @@ body.home #header {
 #page .work a:visited {
 	display: inline-block;
 	width: 30vw;
-	height: 50vh;
+	height: 52vh;
 	margin: 0.7% 1%;
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
@@ -887,13 +922,7 @@ body.home #header {
 
 @keyframes zoom-animate {
     0% {
-	-webkit-transform: scale(0);
-	transform: scale(0);
 	background-position: -100% 70%, 200% 70%;
-    }
-    50% {
-	-webkit-transform: scale(1);
-	transform: scale(1);
     }
     100% {
 	background-position: 20% 70%, 80% 70%;
@@ -902,13 +931,7 @@ body.home #header {
 
 @-webkit-keyframes zoom-animate {
     0% {
-	-webkit-transform: scale(0);
-	transform: scale(0);
 	background-position: -100% 70%, 200% 70%;
-    }
-    60% {
-	-webkit-transform: scale(1);
-	transform: scale(1);
     }
     100% {
 	background-position: 20% 70%, 80% 70%;
@@ -917,13 +940,7 @@ body.home #header {
 
 @-moz-keyframes zoom-animate {
     0% {
-	-webkit-transform: scale(0);
-	transform: scale(0);
 	background-position: -100% 70%, 200% 70%;
-    }
-    60% {
-	-webkit-transform: scale(1);
-	transform: scale(1);
     }
     100% {
 	background-position: 20% 70%, 80% 70%;
@@ -932,13 +949,7 @@ body.home #header {
 
 @keyframes zoom-animate-single {
     0% {
-	-webkit-transform: scale(0);
-	transform: scale(0);
 	background-position: center 150%;
-    }
-    60% {
-	-webkit-transform: scale(1);
-	transform: scale(1);
     }
     100% {
 	background-position: center 70%;
@@ -947,13 +958,8 @@ body.home #header {
 
 @-webkit-keyframes zoom-animate-single {
     0% {
-	-webkit-transform: scale(0);
-	transform: scale(0);
+	-webkit-transform: scale(1.3);
 	background-position: center 200%;
-    }
-    60% {
-	-webkit-transform: scale(1);
-	transform: scale(1);
     }
     100% {
 	background-position: center 70%;
@@ -962,13 +968,7 @@ body.home #header {
 
 @-moz-keyframes zoom-animate-single {
     0% {
-	-webkit-transform: scale(0);
-	transform: scale(0);
 	background-position: center 200%;
-    }
-    60% {
-	-webkit-transform: scale(1);
-	transform: scale(1);
     }
     100% {
 	background-position: center 70%;
@@ -1001,14 +1001,25 @@ body.home #header {
 	z-index: 10;
 	margin-right: 50px;
 	width: 100%;
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
+	cursor: -webkit-zoom-in;
+	cursor: -moz-zoom-in;
+	cursor: zoom-in;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+#gallery img.item.zoom {
+	cursor: -webkit-zoom-out;
+	cursor: -moz-zoom-out;
+	cursor: zoom-out;
+	-webkit-transform: scale(1.3);
+	-moz-transform: scale(1.3);
+	transform: scale(1.3);
 }
 
 #gallery .image_description {
-	padding: 12% 10% 5% 10%;
+	padding: 12% 8% 5% 8%;
 	font-size: 0.9em;
 }
 
@@ -1027,12 +1038,8 @@ body.home #header {
 	animation-duration: 1.5s;
 }
 
-#gallery a.button:link,
-#gallery a.button:visited {
-        font: 0.8em "Poppins";
-}
-
 #gallery p strong {
+	font-weight: normal;
 	color: #fff;
 }
 
@@ -1060,6 +1067,76 @@ body.home #header {
 
 
 /*	=============================================================	
+	BLOG
+	-------------------------------------------------------------	*/
+#page #blog,
+#page #contact {
+	padding: 12% 8% 5% 8%;
+	font-size: 0.9em;
+}
+
+#page #blog h2 {
+	font-size: 1.3em;
+}
+
+#page #blog h6 {
+	text-transform: uppercase;
+	padding-top: 10px;
+	font: 0.8em "Poppins", Arial, Sans-serif;
+    	letter-spacing: 3px;
+    	color: #d8a731;
+}
+
+#page #blog .comment {
+	padding: 2%;
+	text-align: center;
+	border: 1px #38332d solid
+}
+
+#page .pagination {
+	padding: 7px 18px;
+	text-decoration: none;
+	text-transform: uppercase;
+	font: 0.7em "Poppins", Arial, Sans-serif;
+	letter-spacing: 3px;
+	color: #d8a731;
+}
+
+
+/*	=============================================================	
+	CONTACT
+	-------------------------------------------------------------	*/
+
+#page #contact label {
+	color: #8f8d87;
+}
+
+#page #contact input,
+#page #contact textarea,
+#page #contact select {
+	margin: 12px 0 20px;
+	padding: 2.5% 3%;
+	font: 0.9em "Droid Serif", Georgia, Serif;
+	line-height: 1.5em;
+	color: #454545;
+	border: 0;
+	background: #efefef;
+	outline: none;
+	width: 100%;
+}
+
+#page #contact textarea {
+	height: 100px;
+}
+
+#page #contact .button {
+	font-weight: bold;
+	color: #fff;
+	background-color: #d8a731;
+}
+
+
+/*	=============================================================	
 	FAKE CHAT
 	-------------------------------------------------------------	*/
 
@@ -1076,7 +1153,6 @@ body.home #header {
 	animation: show-options 1 ease 1s;
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
 
@@ -1086,7 +1162,7 @@ body.home #header {
 	padding: 10px 20px;
 	border: 1px #d8a731 solid;
 	border-radius: 2px;
-	font-size: 1em;
+	font-size: 0.9em;
 	color: #d8a731;
 	text-decoration: none;
 	background: rgba(45,43,41,0.7);
@@ -1111,7 +1187,7 @@ body.home #header {
 	padding: 14px 20px;
 	margin: 10px 0;
 	max-width: 80%;
-	font-size: 1em;
+	font-size: 0.9em;
 	line-height: 1.55em;
 	color: #ababab;
 	background: #312f2d;
@@ -1132,7 +1208,7 @@ body.home #header {
 	-moz-transform: scale(0.4);
 	-webkit-transform: scale(0.4);
 	transform: scale(0.4);
-	content: url('http://zakrowling.com/wp-content/themes/zakrowling/images/avatar.png');
+	content: url('http://moltobene.co/wp-content/themes/moltobene/images/avatar.png');
 }
 
 #page #gallery .messages .message:first-child p {
@@ -1205,21 +1281,21 @@ body.home #header {
 @-moz-keyframes text-animate {
     0% {
         -moz-transform: translateY(30px);
-	opacity: 0;
+		opacity: 0;
     }
     100% {
         -moz-transform: translateY(0);
-	opacity: 1;
+		opacity: 1;
     }
 }
 @-webkit-keyframes text-animate {
     0% {
         -webkit-transform: translateY(30px);
-	opacity: 0;
+		opacity: 0;
     }
     100% {
         -webkit-transform: translateY(0);
-	opacity: 1;
+		opacity: 1;
     }
 }
 @keyframes text-animate {
@@ -1237,69 +1313,69 @@ body.home #header {
 @-moz-keyframes text-pop {
     0% {
         -moz-transform: scale(0);
-	opacity: 0;
+		opacity: 0;
     }
     100% {
         -moz-transform: scale(1);
-	opacity: 1;
+		opacity: 1;
     }
 }
 @-webkit-keyframes text-pop {
     0% {
         -webkit-transform: scale(0);
-	opacity: 0;
+		opacity: 0;
     }
     100% {
         -webkit-transform: scale(1);
-	opacity: 1;
+		opacity: 1;
     }
 }
 @keyframes text-pop {
     0% {
         transform: scale(0);
-	opacity: 0;
+		opacity: 0;
     }
     100% {
         transform: scale(1);
-	opacity: 1;
+		opacity: 1;
     }
 }
 
 
 @-moz-keyframes text-load {
     0% {
-        -moz-transform: scale(1);
+        -moz-opacity: 1;
     }
     50% {
-    	-moz-transform: scale(0.95);
+    	-moz-opacity: 0.8;
     	-moz-box-shadow: inset 0 0 100px #3d3b39;
     }
     100% {
-        -moz-transform: scale(1);
+        -moz-opacity: 1;
     }
 }
 @-webkit-keyframes text-load {
     0% {
-        -webkit-transform: scale(1);
+        opacity: 1;
     }
     50% {
-    	-webkit-transform: scale(0.95);
+    	opacity: 0.8;
     	-webkit-box-shadow: inset 0 0 100px #3d3b39;
     }
     100% {
-        -webkit-transform: scale(1);
+        opacity: 1;
     }
 }
 @keyframes text-load {
     0% {
-        transform: scale(1);
+        opacity: 1;
     }
     50% {
-    	transform: scale(0.95);
+    	opacity: 0.8;
     	box-shadow: inset 0 0 100px #3d3b39;
     }
     100% {
-        transform: scale(1);
+        opacity: 1;
     }
 }
 
@@ -1329,11 +1405,11 @@ body.home #header {
 }
 
 #footer .social img:hover {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	filter: alpha(opacity=100);
-	-moz-opacity: 1;
-	-khtml-opacity: 1;
-	opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  opacity: 1;
 }
 	
 #footer h2 {
